tests/baselines/reference/mappedTypes6.errors.txt
tests/cases/conformance/types/mapped/mappedTypes6.ts(23,5): error TS2322: Type 'T' is not assignable to type 'Required<T>'.
tests/cases/conformance/types/mapped/mappedTypes6.ts(24,5): error TS2322: Type 'Partial<T>' is not assignable to type 'Required<T>'.
tests/cases/conformance/types/mapped/mappedTypes6.ts(27,5): error TS2322: Type 'Partial<T>' is not assignable to type 'T'.
  'Partial<T>' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint '{}'.
tests/cases/conformance/types/mapped/mappedTypes6.ts(37,5): error TS2322: Type 'Required<T>' is not assignable to type 'Denullified<T>'.
  Type 'T[P]' is not assignable to type 'NonNullable<T[P]>'.
    Type 'T[keyof T]' is not assignable to type 'NonNullable<T[P]>'.
      Type 'T[string] | T[number] | T[symbol]' is not assignable to type 'NonNullable<T[P]>'.
        Type 'T[string]' is not assignable to type 'NonNullable<T[P]>'.
tests/cases/conformance/types/mapped/mappedTypes6.ts(38,5): error TS2322: Type 'T' is not assignable to type 'Denullified<T>'.
tests/cases/conformance/types/mapped/mappedTypes6.ts(39,5): error TS2322: Type 'Partial<T>' is not assignable to type 'Denullified<T>'.
tests/cases/conformance/types/mapped/mappedTypes6.ts(42,5): error TS2322: Type 'T' is not assignable to type 'Required<T>'.
tests/cases/conformance/types/mapped/mappedTypes6.ts(43,5): error TS2322: Type 'Partial<T>' is not assignable to type 'Required<T>'.
tests/cases/conformance/types/mapped/mappedTypes6.ts(47,5): error TS2322: Type 'Partial<T>' is not assignable to type 'T'.
  'Partial<T>' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint '{}'.
tests/cases/conformance/types/mapped/mappedTypes6.ts(56,5): error TS2322: Type '{}' is not assignable to type 'Denullified<T>'.
tests/cases/conformance/types/mapped/mappedTypes6.ts(57,5): error TS2322: Type '{}' is not assignable to type 'Required<T>'.
tests/cases/conformance/types/mapped/mappedTypes6.ts(58,5): error TS2322: Type '{}' is not assignable to type 'T'.
  '{}' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint '{}'.
tests/cases/conformance/types/mapped/mappedTypes6.ts(92,1): error TS2741: Property 'b' is missing in type '{ a: number; }' but required in type 'Foo'.
tests/cases/conformance/types/mapped/mappedTypes6.ts(104,1): error TS2739: Type '{ a: number; }' is missing the following properties from type 'Required<Foo>': b, c, d
tests/cases/conformance/types/mapped/mappedTypes6.ts(105,1): error TS2739: Type '{ a: number; b: number; }' is missing the following properties from type 'Required<Foo>': c, d
tests/cases/conformance/types/mapped/mappedTypes6.ts(106,1): error TS2741: Property 'd' is missing in type '{ a: number; b: number; c: number; }' but required in type 'Required<Foo>'.
tests/cases/conformance/types/mapped/mappedTypes6.ts(116,4): error TS2540: Cannot assign to 'b' because it is a read-only property.
tests/cases/conformance/types/mapped/mappedTypes6.ts(119,4): error TS2540: Cannot assign to 'a' because it is a read-only property.
tests/cases/conformance/types/mapped/mappedTypes6.ts(120,4): error TS2540: Cannot assign to 'b' because it is a read-only property.


==== tests/cases/conformance/types/mapped/mappedTypes6.ts (19 errors) ====
    type T00<T> = { [P in keyof T]: T[P] };
    type T01<T> = { [P in keyof T]?: T[P] };
    type T02<T> = { [P in keyof T]+?: T[P] };
    type T03<T> = { [P in keyof T]-?: T[P] };
    
    type T04<T> = { readonly [P in keyof T]: T[P] };
    type T05<T> = { readonly [P in keyof T]?: T[P] };
    type T06<T> = { readonly [P in keyof T]+?: T[P] };
    type T07<T> = { readonly [P in keyof T]-?: T[P] };
    
    type T08<T> = { +readonly [P in keyof T]: T[P] };
    type T09<T> = { +readonly [P in keyof T]?: T[P] };
    type T10<T> = { +readonly [P in keyof T]+?: T[P] };
    type T11<T> = { +readonly [P in keyof T]-?: T[P] };
    
    type T12<T> = { -readonly [P in keyof T]: T[P] };
    type T13<T> = { -readonly [P in keyof T]?: T[P] };
    type T14<T> = { -readonly [P in keyof T]+?: T[P] };
    type T15<T> = { -readonly [P in keyof T]-?: T[P] };
    
    function f1<T>(x: Required<T>, y: T, z: Partial<T>) {
        x = x;
        x = y;  // Error
        ~
!!! error TS2322: Type '{|T|0|}' is not assignable to type '{|Required|1|}<{|T|2|}>'.
!!! annotated symbol 0 tests/cases/conformance/types/mapped/mappedTypes6.ts:21:13
!!! annotated symbol 1 /.ts/lib.es5.d.ts:1431:6
!!! annotated symbol 2 tests/cases/conformance/types/mapped/mappedTypes6.ts:21:13
        x = z;  // Error
        ~
!!! error TS2322: Type '{|Partial|0|}<{|T|1|}>' is not assignable to type '{|Required|2|}<{|T|3|}>'.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:1424:6
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypes6.ts:21:13
!!! annotated symbol 2 /.ts/lib.es5.d.ts:1431:6
!!! annotated symbol 3 tests/cases/conformance/types/mapped/mappedTypes6.ts:21:13
        y = x;
        y = y;
        y = z;  // Error
        ~
!!! error TS2322: Type '{|Partial|0|}<{|T|1|}>' is not assignable to type '{|T|2|}'.
!!! error TS2322:   '{|Partial|3|}<{|T|4|}>' is assignable to the constraint of type '{|T|5|}', but '{|T|6|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:1424:6
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypes6.ts:21:13
!!! annotated symbol 2 tests/cases/conformance/types/mapped/mappedTypes6.ts:21:13
!!! annotated symbol 3 /.ts/lib.es5.d.ts:1424:6
!!! annotated symbol 4 tests/cases/conformance/types/mapped/mappedTypes6.ts:21:13
!!! annotated symbol 5 tests/cases/conformance/types/mapped/mappedTypes6.ts:21:13
!!! annotated symbol 6 tests/cases/conformance/types/mapped/mappedTypes6.ts:21:13
        z = x;
        z = y;
        z = z;
    }
    
    type Denullified<T> = { [P in keyof T]-?: NonNullable<T[P]> };
    
    function f2<T>(w: Denullified<T>, x: Required<T>, y: T, z: Partial<T>) {
        w = w;
        w = x;  // Error
        ~
!!! error TS2322: Type '{|Required|0|}<{|T|1|}>' is not assignable to type '{|Denullified|2|}<{|T|3|}>'.
!!! error TS2322:   Type '{|T|4|}[{|P|5|}]' is not assignable to type '{|NonNullable|6|}<{|T|7|}[{|P|8|}]>'.
!!! error TS2322:     Type '{|T|9|}[keyof {|T|10|}]' is not assignable to type '{|NonNullable|11|}<{|T|12|}[{|P|13|}]>'.
!!! error TS2322:       Type '{|T|14|}[string] | {|T|15|}[number] | {|T|16|}[symbol]' is not assignable to type '{|NonNullable|17|}<{|T|18|}[{|P|19|}]>'.
!!! error TS2322:         Type '{|T|20|}[string]' is not assignable to type '{|NonNullable|21|}<{|T|22|}[{|P|23|}]>'.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:1431:6
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypes6.ts:35:13
!!! annotated symbol 2 tests/cases/conformance/types/mapped/mappedTypes6.ts:33:6
!!! annotated symbol 3 tests/cases/conformance/types/mapped/mappedTypes6.ts:35:13
!!! annotated symbol 4 tests/cases/conformance/types/mapped/mappedTypes6.ts:35:13
!!! annotated symbol 5 tests/cases/conformance/types/mapped/mappedTypes6.ts:33:26
!!! annotated symbol 6 /.ts/lib.es5.d.ts:1474:6
!!! annotated symbol 7 tests/cases/conformance/types/mapped/mappedTypes6.ts:35:13
!!! annotated symbol 8 tests/cases/conformance/types/mapped/mappedTypes6.ts:33:26
!!! annotated symbol 9 tests/cases/conformance/types/mapped/mappedTypes6.ts:35:13
!!! annotated symbol 10 tests/cases/conformance/types/mapped/mappedTypes6.ts:35:13
!!! annotated symbol 11 /.ts/lib.es5.d.ts:1474:6
!!! annotated symbol 12 tests/cases/conformance/types/mapped/mappedTypes6.ts:35:13
!!! annotated symbol 13 tests/cases/conformance/types/mapped/mappedTypes6.ts:33:26
!!! annotated symbol 14 tests/cases/conformance/types/mapped/mappedTypes6.ts:35:13
!!! annotated symbol 15 tests/cases/conformance/types/mapped/mappedTypes6.ts:35:13
!!! annotated symbol 16 tests/cases/conformance/types/mapped/mappedTypes6.ts:35:13
!!! annotated symbol 17 /.ts/lib.es5.d.ts:1474:6
!!! annotated symbol 18 tests/cases/conformance/types/mapped/mappedTypes6.ts:35:13
!!! annotated symbol 19 tests/cases/conformance/types/mapped/mappedTypes6.ts:33:26
!!! annotated symbol 20 tests/cases/conformance/types/mapped/mappedTypes6.ts:35:13
!!! annotated symbol 21 /.ts/lib.es5.d.ts:1474:6
!!! annotated symbol 22 tests/cases/conformance/types/mapped/mappedTypes6.ts:35:13
!!! annotated symbol 23 tests/cases/conformance/types/mapped/mappedTypes6.ts:33:26
        w = y;  // Error
        ~
!!! error TS2322: Type '{|T|0|}' is not assignable to type '{|Denullified|1|}<{|T|2|}>'.
!!! annotated symbol 0 tests/cases/conformance/types/mapped/mappedTypes6.ts:35:13
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypes6.ts:33:6
!!! annotated symbol 2 tests/cases/conformance/types/mapped/mappedTypes6.ts:35:13
        w = z;  // Error
        ~
!!! error TS2322: Type '{|Partial|0|}<{|T|1|}>' is not assignable to type '{|Denullified|2|}<{|T|3|}>'.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:1424:6
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypes6.ts:35:13
!!! annotated symbol 2 tests/cases/conformance/types/mapped/mappedTypes6.ts:33:6
!!! annotated symbol 3 tests/cases/conformance/types/mapped/mappedTypes6.ts:35:13
        x = w;
        x = x;
        x = y;  // Error
        ~
!!! error TS2322: Type '{|T|0|}' is not assignable to type '{|Required|1|}<{|T|2|}>'.
!!! annotated symbol 0 tests/cases/conformance/types/mapped/mappedTypes6.ts:35:13
!!! annotated symbol 1 /.ts/lib.es5.d.ts:1431:6
!!! annotated symbol 2 tests/cases/conformance/types/mapped/mappedTypes6.ts:35:13
        x = z;  // Error
        ~
!!! error TS2322: Type '{|Partial|0|}<{|T|1|}>' is not assignable to type '{|Required|2|}<{|T|3|}>'.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:1424:6
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypes6.ts:35:13
!!! annotated symbol 2 /.ts/lib.es5.d.ts:1431:6
!!! annotated symbol 3 tests/cases/conformance/types/mapped/mappedTypes6.ts:35:13
        y = w;
        y = x;
        y = y;
        y = z;  // Error
        ~
!!! error TS2322: Type '{|Partial|0|}<{|T|1|}>' is not assignable to type '{|T|2|}'.
!!! error TS2322:   '{|Partial|3|}<{|T|4|}>' is assignable to the constraint of type '{|T|5|}', but '{|T|6|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:1424:6
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypes6.ts:35:13
!!! annotated symbol 2 tests/cases/conformance/types/mapped/mappedTypes6.ts:35:13
!!! annotated symbol 3 /.ts/lib.es5.d.ts:1424:6
!!! annotated symbol 4 tests/cases/conformance/types/mapped/mappedTypes6.ts:35:13
!!! annotated symbol 5 tests/cases/conformance/types/mapped/mappedTypes6.ts:35:13
!!! annotated symbol 6 tests/cases/conformance/types/mapped/mappedTypes6.ts:35:13
        z = w;
        z = x;
        z = y;
        z = z;
    }
    
    
    function f3<T>(w: Denullified<T>, x: Required<T>, y: T, z: Partial<T>) {
        w = {};  // Error
        ~
!!! error TS2322: Type '{}' is not assignable to type '{|Denullified|0|}<{|T|1|}>'.
!!! annotated symbol 0 tests/cases/conformance/types/mapped/mappedTypes6.ts:33:6
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypes6.ts:55:13
        x = {};  // Error
        ~
!!! error TS2322: Type '{}' is not assignable to type '{|Required|0|}<{|T|1|}>'.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:1431:6
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypes6.ts:55:13
        y = {};  // Error
        ~
!!! error TS2322: Type '{}' is not assignable to type '{|T|0|}'.
!!! error TS2322:   '{}' is assignable to the constraint of type '{|T|1|}', but '{|T|2|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/conformance/types/mapped/mappedTypes6.ts:55:13
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypes6.ts:55:13
!!! annotated symbol 2 tests/cases/conformance/types/mapped/mappedTypes6.ts:55:13
        z = {};
    }
    
    type Readwrite<T> = {
        -readonly [P in keyof T]: T[P];
    }
    
    function f10<T>(x: Readonly<T>, y: T, z: Readwrite<T>) {
        x = x;
        x = y;
        x = z;
        y = x;
        y = y;
        y = z;
        z = x;
        z = y;
        z = z;
    }
    
    type Foo = {
        a: number;
        b: number | undefined;
        c?: number;
        d?: number | undefined;
    }
    
    declare let x1: Foo;
    
    x1.a;  // number
    x1.b;  // number | undefined
    x1.c;  // number | undefined
    x1.d;  // number | undefined
    
    x1 = { a: 1 };  // Error
    ~~
!!! error TS2741: Property 'b' is missing in type '{ a: number; }' but required in type 'Foo'.
!!! related TS2728 tests/cases/conformance/types/mapped/mappedTypes6.ts:80:5: 'b' is declared here.
    x1 = { a: 1, b: 1 };
    x1 = { a: 1, b: 1, c: 1 };
    x1 = { a: 1, b: 1, c: 1, d: 1 };
    
    declare let x2: Required<Foo>;
    
    x1.a;  // number
    x1.b;  // number | undefined
    x1.c;  // number
    x1.d;  // number
    
    x2 = { a: 1 };  // Error
    ~~
!!! error TS2739: Type '{ a: number; }' is missing the following properties from type 'Required<Foo>': b, c, d
    x2 = { a: 1, b: 1 };  // Error
    ~~
!!! error TS2739: Type '{ a: number; b: number; }' is missing the following properties from type 'Required<Foo>': c, d
    x2 = { a: 1, b: 1, c: 1 };  // Error
    ~~
!!! error TS2741: Property 'd' is missing in type '{ a: number; b: number; c: number; }' but required in type 'Required<Foo>'.
!!! related TS2728 tests/cases/conformance/types/mapped/mappedTypes6.ts:82:5: 'd' is declared here.
    x2 = { a: 1, b: 1, c: 1, d: 1 };
    
    type Bar = {
        a: number;
        readonly b: number;
    }
    
    declare let x3: Bar;
    x3.a = 1;
    x3.b = 1;  // Error
       ~
!!! error TS2540: Cannot assign to 'b' because it is a read-only property.
    
    declare let x4: Readonly<Bar>;
    x4.a = 1;  // Error
       ~
!!! error TS2540: Cannot assign to 'a' because it is a read-only property.
    x4.b = 1;  // Error
       ~
!!! error TS2540: Cannot assign to 'b' because it is a read-only property.
    
    declare let x5: Readwrite<Bar>;
    x5.a = 1;
    x5.b = 1;
    